HW3/javali_tests/others/new/HW3_MarLin/type_error/cast/OkCasts.javali
class A {

}

class B extends A {

}

class Main {

   void main() {
      A a;
      B b;
      
      a = new A();
      b = new B();
      
      a = b;
      a = (A) b;
      b = (B) a;
   }
}
